<resources>
    <string name="app_name">MyFristAplication</string>
    <string name="frist_num">Frist Num</string>
    <string name="second_num">Second num</string>
    <string name="calculator">Calculator</string>
    <string name="result">Result</string>
    <string name="calcular">Calcular</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
</resources>